--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'com.google.firebase:firebase-messaging'
 }
